--- a/docker-compose.oca.yml
+++ b/docker-compose.oca.yml
@@ -1,17 +1,19 @@
-version: '2.1'
+version: '3.7'
+
 services:
   odoo:
     image: anybox/odoo-oca:12.0
     restart: unless-stopped
+    depends_on:
+      - postgresql
     volumes:
       - conf:/etc/odoo
       - data_dir:/var/lib/odoo
       - pgsocket:/var/run/postgresql
-#    networks:
-#      - caddy_default
     ports:
       - "8069"
       - "8072"
+    # Preinstall useful modules
     command: /srv/odoo/odoo-bin -i base,disable_odoo_online,backend_theme_v12,website_odoo_debranding
 
   postgresql:
@@ -23,13 +25,6 @@ services:
 
 volumes:
   conf:
-#    driver: anybox/buttervolume:latest
   data_dir:
-#    driver: anybox/buttervolume:latest
   postgres:
-#    driver: anybox/buttervolume:latest
   pgsocket:
-
-#networks:
-#  caddy_default:
-#    external: true
