--- a/odoo/Dockerfile
+++ b/odoo/Dockerfile
@@ -1,6 +1,7 @@
 FROM debian:stretch
 LABEL maintainer="Anybox"
 ENV DEBIAN_FRONTEND noninteractive
+ENV VERSION 12.0
 
 COPY sources.list /etc/apt/
 
@@ -8,23 +9,35 @@ COPY sources.list /etc/apt/
 ENV LANG C.UTF-8
 
 RUN set -x; \
-    apt-get update \
+    echo "deb http://deb.nodesource.com/node_8.x stretch main" > /etc/apt/sources.list.d/nodesource.list \
+    && echo 'deb http://apt.postgresql.org/pub/repos/apt/ stretch-pgdg main' > etc/apt/sources.list.d/pgdg.list \
+    && apt-get update \
+    && apt-get install -y --no-install-recommends dirmngr gnupg \
+        && export GNUPGHOME="$(mktemp -d)" \
+        && repokey='B97B0AFCAA1A47F044F244A07FCC7D46ACCC4CF8' \
+        && gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "${repokey}" \
+        && gpg --armor --export "${repokey}" | apt-key add - \
+    && repokey='9FD3B784BC1C6FC31A8A0A1C1655A0AB68576280' \
+    && gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "${repokey}" \
+    && gpg --armor --export "${repokey}" | apt-key add - \
+    && gpgconf --kill all \
+    && rm -rf "$GNUPGHOME" \
+    && apt-get update \
     && apt-get install -y --no-install-recommends \
         adduser \
         ca-certificates \
         curl \
-        dirmngr \
         fonts-noto-cjk \
         # for geoip OCA modules:
         geoip-bin \
         # unavailable:
         #geoip-database-contrib \
-        gnupg \
         libssl1.0-dev \
         lsb-base \
         node-clean-css \
         node-less \
         python3-pip \
+        postgresql-client \
         python3-pyldap \
         python3-qrcode \
         python3-renderpm \
@@ -32,49 +45,19 @@ RUN set -x; \
         python3-vobject \
         python3-watchdog \
         xz-utils \
-    && curl -o wkhtmltox.deb -sSL https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.stretch_amd64.deb \
-    && echo '7e35a63f9db14f93ec7feeb0fce76b30c08f2057 wkhtmltox.deb' | sha1sum -c - \
-    && dpkg --force-depends -i wkhtmltox.deb \
-    && apt-get -y install -f --no-install-recommends \
-    && rm -rf /var/lib/apt/lists/* wkhtmltox.deb
-
-# install latest postgresql-client
-RUN set -x; \
-        echo 'deb http://apt.postgresql.org/pub/repos/apt/ stretch-pgdg main' > etc/apt/sources.list.d/pgdg.list \
-        && export GNUPGHOME="$(mktemp -d)" \
-        && repokey='B97B0AFCAA1A47F044F244A07FCC7D46ACCC4CF8' \
-        && gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "${repokey}" \
-        && gpg --armor --export "${repokey}" | apt-key add - \
-        && gpgconf --kill all \
-        && rm -rf "$GNUPGHOME" \
-        && apt-get update  \
-        && apt-get install -y postgresql-client \
-        && rm -rf /var/lib/apt/lists/*
-
-# Install rtlcss (on Debian stretch)
-RUN set -x;\
-    echo "deb http://deb.nodesource.com/node_8.x stretch main" > /etc/apt/sources.list.d/nodesource.list \
-    && export GNUPGHOME="$(mktemp -d)" \
-    && repokey='9FD3B784BC1C6FC31A8A0A1C1655A0AB68576280' \
-    && gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "${repokey}" \
-    && gpg --armor --export "${repokey}" | apt-key add - \
-    && gpgconf --kill all \
-    && rm -rf "$GNUPGHOME" \
-    && apt-get update \
-    && apt-get install -y nodejs \
-    && npm install --no-save -g rtlcss \
-    && rm -rf /var/lib/apt/lists/*
-
-# install Odoo
-ENV VERSION 12.0
-RUN apt-get update \
-    && apt-get install -y \
         build-essential \
         libldap2-dev \ 
         libpq-dev \
         libsasl2-dev \
         python3-dev \
         unzip \
+        nodejs \
+    && curl -o wkhtmltox.deb -sSL https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.stretch_amd64.deb \
+    && echo '7e35a63f9db14f93ec7feeb0fce76b30c08f2057 wkhtmltox.deb' | sha1sum -c - \
+    && dpkg --force-depends -i wkhtmltox.deb \
+    && apt-get -y install -f --no-install-recommends \
+    && rm wkhtmltox.deb \
+    && npm install --no-save -g rtlcss \
     && cd /srv \
     && curl -o odoo.zip -SL https://github.com/odoo/odoo/archive/${VERSION}.zip \
     && unzip odoo.zip \
