--- a/docker-compose.oca.yml
+++ b/docker-compose.oca.yml
@@ -5,10 +5,10 @@ services:
     image: anybox/odoo-oca:12.0
     restart: unless-stopped
     depends_on:
-      - postgresql
+      - db
     volumes:
-      - conf:/etc/odoo
-      - data_dir:/var/lib/odoo
+      - odooconf:/etc/odoo
+      - odoodata:/var/lib/odoo
       - pgsocket:/var/run/postgresql
     ports:
       - "8069"
@@ -16,15 +16,15 @@ services:
     # Preinstall useful modules
     command: /srv/odoo/odoo-bin -i base,disable_odoo_online,backend_theme_v12,website_odoo_debranding
 
-  postgresql:
-    image: postgresql:odoo12
+  db:
+    image: postgresql:11
     restart: unless-stopped
     volumes:
       - pgsocket:/var/run/postgresql
-      - postgres:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
 
 volumes:
-  conf:
-  data_dir:
-  postgres:
+  odooconf:
+  odoodata:
+  pgdata:
   pgsocket:
