--- a/odoo-ee/odoo.conf
+++ b/odoo-ee/odoo.conf
@@ -1,5 +1,5 @@
 [options]
-addons_path = /mnt/extra-addons,/srv/odoo/addons,/mnt/custom-addons
+addons_path = /srv/extra-addons,/srv/odoo/addons,/srv/custom-addons
 admin_passwd = False
 auto_reload = False
 csv_internal_sep = ,
