--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,11 @@ build:
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_ENV_CI_REGISTRY
     - export BUILD_DT=`date -Iseconds`
-    - docker build --pull --cache-from $IMAGE:cache --build-arg REVISION=$CI_COMMIT_SHA --build-arg VERSION=$CI_COMMIT_TAG --build-arg BUILD_DATETIME=$BUILD_DT --build-arg IMAGE=$IMAGE -t "$IMAGE:$COMMIT_TAG" odoo
+    - docker pull "$IMAGE:latest"
+    - docker build --pull --cache-from $IMAGE:latest --build-arg REVISION=$CI_COMMIT_SHA --build-arg VERSION=$CI_COMMIT_TAG --build-arg BUILD_DATETIME=$BUILD_DT --build-arg IMAGE=$IMAGE -t "$IMAGE:$COMMIT_TAG" odoo
+    - docker tag "$IMAGE:$COMMIT_TAG" "$IMAGE:latest"
     - docker push "$IMAGE:$COMMIT_TAG"
+    - docker push "$IMAGE:latest"
 
 test:
   stage: test
@@ -35,15 +38,6 @@ test:
       - test.log
     expire_in: 1 day
 
-
-# cache-image:
-#   stage: optimization
-#   script:
-#     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_ENV_CI_REGISTRY
-#     - docker pull "$IMAGE:$COMMIT_TAG"
-#     - docker tag "$IMAGE:$COMMIT_TAG" "$IMAGE:cache"
-#     - docker push "$IMAGE:cache"
-#   allow_failure: true
 
 # container_scanning:
 #   stage: optimization
