--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build:
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_ENV_CI_REGISTRY
     - export BUILD_DT=`date -Iseconds`
-    - docker pull "$IMAGE:latest"
+    - docker pull "$IMAGE"
     - docker build --pull --cache-from $IMAGE:latest --build-arg REVISION=$CI_COMMIT_SHA --build-arg VERSION=$CI_COMMIT_TAG --build-arg BUILD_DATETIME=$BUILD_DT --build-arg IMAGE=$IMAGE -t "$IMAGE:$COMMIT_TAG" odoo
     - docker tag "$IMAGE:$COMMIT_TAG" "$IMAGE:latest"
     - docker push "$IMAGE:$COMMIT_TAG"
