--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 variables:
   IMAGE: "$CI_REGISTRY_IMAGE"
-  COMMIT_TAG: "$CI_COMMIT_REF_NAME-$CI_COMMIT_SHA-$CI_PIPELINE_ID"
+  COMMIT_TAG: "$CI_COMMIT_REF_NAME:latest"
   COMPOSE_FILE_TESTS: docker-compose-tests.yml
 
 services:
@@ -19,11 +19,8 @@ build:
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_ENV_CI_REGISTRY
     - export BUILD_DT=`date -Iseconds`
-    - docker pull "$IMAGE"
-    - docker build --pull --cache-from $IMAGE:latest --build-arg REVISION=$CI_COMMIT_SHA --build-arg VERSION=$CI_COMMIT_TAG --build-arg BUILD_DATETIME=$BUILD_DT --build-arg IMAGE=$IMAGE -t "$IMAGE:$COMMIT_TAG" odoo
-    - docker tag "$IMAGE:$COMMIT_TAG" "$IMAGE:latest"
+    - docker build --pull --cache-from $IMAGE --build-arg REVISION=$CI_COMMIT_SHA --build-arg VERSION=$CI_COMMIT_TAG --build-arg BUILD_DATETIME=$BUILD_DT --build-arg IMAGE=$IMAGE -t "$IMAGE:$COMMIT_TAG" odoo
     - docker push "$IMAGE:$COMMIT_TAG"
-    - docker push "$IMAGE:latest"
 
 test:
   stage: test
