--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 variables:
-  IMAGE: "$CI_REGISTRY_IMAGE"
-  COMMIT_TAG: "latest"
+  IMAGE: "odoo" # dont' name it odoo-docker
+  COMMIT_TAG: "$CI_COMMIT_REF_NAME-dev"
   COMPOSE_FILE_TESTS: docker-compose-tests.yml
 
 services:
