build postgres and simplify command lines

--- a/odoo/docker-compose.yml
+++ b/odoo/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     command: /srv/odoo/odoo-bin -i base
 
   db:
-    image: postgres:11
+    build: ../postgresql
     volumes:
       - pgsocket:/var/run/postgresql
       - pgdata:/var/lib/postgresql/data
