--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,8 @@ build:
   stage: build
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_ENV_CI_REGISTRY
-    - export BUILD_DT=`date -Iseconds`
-    - docker build --pull --cache-from $IMAGE:$COMMIT_TAG --build-arg REVISION=$CI_COMMIT_SHA --build-arg VERSION=$CI_COMMIT_TAG --build-arg BUILD_DATETIME=$BUILD_DT --build-arg IMAGE=$IMAGE -t "$IMAGE:$COMMIT_TAG" odoo
+    - docker build --pull --cache-from $IMAGE:$COMMIT_TAG-postgresql -t "$IMAGE:odoo-$COMMIT_TAG" postgresql
+    - docker build --pull --cache-from $IMAGE:$COMMIT_TAG-odoo -t "$IMAGE:odoo-$COMMIT_TAG" odoo
     - docker push "$IMAGE:$COMMIT_TAG"
 
 test:
