try to fix cache

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,8 @@ build:
   stage: build
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_ENV_CI_REGISTRY
-    - docker build --pull --cache-from registry.anybox.cloud/$IMAGE:$COMMIT_TAG-postgresql -t "$IMAGE:$COMMIT_TAG-postgresql" postgresql
-    - docker build --pull --cache-from registry.anybox.cloud/$IMAGE:$COMMIT_TAG-odoo -t "$IMAGE:$COMMIT_TAG-odoo" odoo
+    - docker build --cache-from registry.anybox.cloud/$IMAGE:$COMMIT_TAG-postgresql -t "$IMAGE:$COMMIT_TAG-postgresql" postgresql
+    - docker build --cache-from registry.anybox.cloud/$IMAGE:$COMMIT_TAG-odoo -t "$IMAGE:$COMMIT_TAG-odoo" odoo
     - docker push "$IMAGE:$COMMIT_TAG-postgresql"
     - docker push "$IMAGE:$COMMIT_TAG-odoo"
 
