--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,10 +18,14 @@ build:
   stage: build
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_ENV_CI_REGISTRY
-    - docker build --cache-from registry.anybox.cloud/$IMAGE/postgresql:11 -t registry.anybox.cloud/$IMAGE/postgresql:11 postgresql
-    - docker build --cache-from registry.anybox.cloud/$IMAGE/odoo:$COMMIT_TAG -t registry.anybox.cloud/$IMAGE/odoo:$COMMIT_TAG odoo
-    - docker push registry.anybox.cloud/$IMAGE/postgresql:11
-    - docker push registry.anybox.cloud/$IMAGE/odoo:$COMMIT_TAG
+    - docker pull $IMAGE/postgresql-11:latest || true
+    - docker pull $IMAGE/odoo:latest || true
+    - docker build --cache-from $IMAGE/postgresql-11:latest -t $IMAGE/postgresql-11:$COMMIT_TAG -t $IMAGE/postgresql-11:latest postgresql
+    - docker build --cache-from $IMAGE/odoo:latest -t $IMAGE/odoo:$COMMIT_TAG -t $IMAGE/odoo:latest odoo
+    - docker push $IMAGE/postgresql-11:$COMMIT_TAG
+    - docker push $IMAGE/postgresql-11:latest
+    - docker push $IMAGE/odoo:$COMMIT_TAG
+    - docker push $IMAGE/odoo:latest    
 
 test:
   stage: test
