--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,12 +20,16 @@ build:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_ENV_CI_REGISTRY
     - docker pull $IMAGE/postgresql-11:latest || true
     - docker pull $IMAGE/odoo:latest || true
+    - docker pull $IMAGE/odoo-oca:latest || true
     - docker build --cache-from $IMAGE/postgresql-11:latest -t $IMAGE/postgresql-11:$COMMIT_TAG -t $IMAGE/postgresql-11:latest postgresql
     - docker build --cache-from $IMAGE/odoo:latest -t $IMAGE/odoo:$COMMIT_TAG -t $IMAGE/odoo:latest odoo
+    - docker build --cache-from $IMAGE/odoo-oca:latest -t $IMAGE/odoo-oca:$COMMIT_TAG -t $IMAGE/odoo-oca:latest odoo-oca
     - docker push $IMAGE/postgresql-11:$COMMIT_TAG
     - docker push $IMAGE/postgresql-11:latest
     - docker push $IMAGE/odoo:$COMMIT_TAG
     - docker push $IMAGE/odoo:latest    
+    - docker push $IMAGE/odoo-oca:$COMMIT_TAG
+    - docker push $IMAGE/odoo-oca:latest    
 
 test:
   stage: test
