--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,18 +22,18 @@ build:
     - docker pull $IMAGE/debian:stretch || true
     - docker pull $IMAGE/odoo:$COMMIT_TAG || true
     - docker pull $IMAGE/ocb:$COMMIT_TAG || true
-    - docker pull $IMAGE/odoo+oca:$COMMIT_TAG || true
-    - docker pull $IMAGE/ocb+oca:$COMMIT_TAG || true
+    - docker pull $IMAGE/odoo-oca:$COMMIT_TAG || true
+    - docker pull $IMAGE/ocb-oca:$COMMIT_TAG || true
     - docker build --cache-from $IMAGE/postgresql:11 -t $IMAGE/postgresql:11 postgresql
     - docker build --cache-from $IMAGE/debian:stretch -t $IMAGE/debian:stretch debian
     - docker build --cache-from $IMAGE/odoo:$COMMIT_TAG -t $IMAGE/odoo:$COMMIT_TAG odoo
-    - docker build --cache-from $IMAGE/odoo+oca:$COMMIT_TAG -t $IMAGE/odoo+oca:$COMMIT_TAG odoo+oca
-    - docker build --cache-from $IMAGE/ocb+oca:$COMMIT_TAG -t $IMAGE/ocb+oca:$COMMIT_TAG ocb+oca
+    - docker build --cache-from $IMAGE/odoo-oca:$COMMIT_TAG -t $IMAGE/odoo-oca:$COMMIT_TAG odoo-oca
+    - docker build --cache-from $IMAGE/ocb-oca:$COMMIT_TAG -t $IMAGE/ocb-oca:$COMMIT_TAG ocb-oca
     - docker push $IMAGE/postgresql:11
     - docker push $IMAGE/debian:stretch
     - docker push $IMAGE/odoo:$COMMIT_TAG
-    - docker push $IMAGE/odoo+oca:$COMMIT_TAG
-    - docker push $IMAGE/ocb+oca:$COMMIT_TAG
+    - docker push $IMAGE/odoo-oca:$COMMIT_TAG
+    - docker push $IMAGE/ocb-oca:$COMMIT_TAG
 
 test:
   stage: test
