--- a/ocb-oca/Dockerfile
+++ b/ocb-oca/Dockerfile
@@ -1,27 +1,29 @@
 FROM registry.anybox.cloud/anybox/odoo-docker/ocb:12.0
-MAINTAINER Anybox
+
+LABEL maintainer="Anybox"
+ENV VERSION 12.0
 
 RUN set -x; \
-        cd /srv/extra-addons \
+    cd /srv/extra-addons \
 #
-        ### DOWNLOAD MODULES
-        && for repo in \
-            OCA/web \
-            OCA/server-brand \
-            OCA/server-tools \
-            Openworx/backend_theme \
-            OCA/website \
-            OCA/contract \
-            OCA/project \
-            OCA/l10n-france \
-            OCA/partner-contact \
-        ; do curl -o 12.0.zip -sSL https://github.com/$repo/archive/12.0.zip \
-            && unzip 12.0.zip \
-            && rm -rf ${repo#*/}-12.0/setup \
-            && mv -f ${repo#*/}-12.0/* . \
-            && rm -rf ${repo#*/}-12.0 \
-        ; done \
-        && rm -rf .gitignore README.md .travis.yml *zip
+    ### DOWNLOAD MODULES
+    && for repo in \
+        OCA/web \
+        OCA/server-brand \
+        OCA/server-tools \
+        Openworx/backend_theme \
+        OCA/website \
+        OCA/contract \
+        OCA/project \
+        OCA/l10n-france \
+        OCA/partner-contact \
+    ; do curl -o addons.zip -sSL https://github.com/$repo/archive/$VERSION.zip \
+        && unzip addons.zip \
+        && rm -rf ${repo#*/}-$VERSION/setup \
+        && mv -f ${repo#*/}-$VERSION/* . \
+        && rm -rf ${repo#*/}-$VERSION \
+    ; done \
+    && rm -rf .gitignore README.md .travis.yml *zip
             
             
 VOLUME /var/lib/odoo
