--- a/ocb/Dockerfile
+++ b/ocb/Dockerfile
@@ -4,7 +4,7 @@ LABEL maintainer="Anybox"
 ENV VERSION 12.0
 
 RUN cd /srv \
-    && curl -o OCB.zip -SL https://github.com/OCA/OCB/archive/$VERSION.zip \
+    && curl -o OCB.zip -sSL https://github.com/OCA/OCB/archive/$VERSION.zip \
     && unzip -q OCB.zip \
     && rm OCB.zip \
     && mv OCB-$VERSION OCB \
