--- a/odoo-ee/Dockerfile
+++ b/odoo-ee/Dockerfile
@@ -9,11 +9,11 @@ RUN set -x; \
     cd /srv/extra-addons \
 #
     ### DOWNLOAD MODULES
-    curl -OJL -u ${GITHUB_TOKEN}:x-oauth-basic \
+    curl -o addons.zip -JL -u ${GITHUB_TOKEN}:x-oauth-basic \
       https://github.com/odoo/enterprise/archive/$VERSION.zip \
-    && unzip -q enterprise-$VERSION.zip \
+    && unzip -q addons.zip \
     && mv -f enterprise-$VERSION/* . \
     && rm -rf enterprise-$VERSION \
-    && rm -f enterprise-$VERSION.zip
+    && rm -f addons.zip
 
 COPY odoo.conf /etc/odoo/
