--- a/odoo-ee/Dockerfile
+++ b/odoo-ee/Dockerfile
@@ -10,7 +10,7 @@ RUN set -x; \
     cd /srv/extra-addons \
 #
     ### DOWNLOAD MODULES
-    curl -o addons.zip -sSL -u ${GITHUB_TOKEN}:x-oauth-basic \
+    && curl -o addons.zip -sSL -u ${GITHUB_TOKEN}:x-oauth-basic \
       https://github.com/odoo/enterprise/archive/$VERSION.zip \
     && unzip -q addons.zip \
     && mv -f enterprise-$VERSION/* . \
