missing option on old pip

--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -59,7 +59,7 @@ RUN set -x; \
     && apt-get -y install -f --no-install-recommends \
     && rm wkhtmltox.deb \
     && npm install --no-save -g rtlcss \
-    && pip install --no-cache-dir --upgrade pip \
+    && pip install --upgrade pip \
     && pip install --no-cache-dir simplejson num2words unicodecsv phonenumbers \
     && pip install --no-cache-dir -r https://github.com/odoo/odoo/raw/$VERSION/requirements.txt \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
