use newer version of pip after upgrade. Python ldap already in reqs

--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -39,7 +39,6 @@ RUN set -x; \
         node-less \
         python-pip \
         postgresql-client \
-        python-ldap \
         python-qrcode \
         python-renderpm \
         python-setuptools \
@@ -60,6 +59,7 @@ RUN set -x; \
     && rm wkhtmltox.deb \
     && npm install --no-save -g rtlcss \
     && pip install --upgrade pip \
+    && hash -d pip \
     && pip install --no-cache-dir simplejson num2words unicodecsv phonenumbers \
     && pip install --no-cache-dir -r https://github.com/odoo/odoo/raw/$VERSION/requirements.txt \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
