--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -65,7 +65,7 @@ RUN set -x; \
     && rm wkhtmltox.deb \
     && npm install --no-save -g rtlcss \
     && pip install --upgrade pip \
-    && hash -d pip \
+    && hash -r \
     && pip install --no-cache-dir simplejson num2words unicodecsv phonenumbers \
     && pip install --no-cache-dir -r https://github.com/odoo/odoo/raw/$VERSION/requirements.txt \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
